# Materials

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.h  windows.cpp
Archive/: Super_matrix.h  main.cpp  matrix_ori.h
Kyles/: CMakeLists.txt  main.cpp  main2.cpp  main2.h
Kyles/bin_win/: CMakeCache.txt  KYLE.sln  KYLE.vcxproj  KYLE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Kyles/bin_win/KYLE.dir/Debug/KYLE.tlog/: CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.write.1.tlog
Kyles/原版/: main.cpp
Mus_World/: CMakeLists.txt  README.md  main.cpp  main.h  matrix.h  object.cpp  object.h  windows.h
Mus_World/bin_win/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Mus_World/bin_win/Debug/: KYLE.ilk
Mus_World/bin_win/KYLE.dir/Debug/KYLE.tlog/: CL.command.1.tlog  KYLE.lastbuildstate  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog
Mus_World/原版/: CMakeLists.txt
News/: CMakeLists.txt  whitted.cpp
bin_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MUUM.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
bin_win/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
bin_win/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
bin_win/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MUUM.vcxproj  MUUM.vcxproj.filters  cmake_install.cmake
bin_win/src/Debug/: MUUM.ilk
bin_win/src/MUUM.dir/Debug/MUUM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MUUM.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: camera.h  data.h  matrix.h  object.h
src/: CMakeLists.txt  main.cpp
原版/: matrix.h
